force-app/main/default/objects/SymbolObject__mdt/SymbolObject__mdt.object-meta.xml
<CustomObject>
    <label>図記号</label>
</CustomObject>