force-app/main/default/objects/SymbolObject__mdt/fields/CharacterSymbol__c.field-meta.xml
<CustomField>
    <fullName>CharacterSymbol__c</fullName>
    <label>文字記号</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>