force-app/main/default/objects/SymbolObject__mdt/fields/InstrumentSymbol__c.field-meta.xml
<CustomField>
    <fullName>InstrumentSymbol__c</fullName>
    <label>器具記号</label>
    <length>100</length>
    <type>Text</type>
</CustomField>