force-app/main/default/objects/SymbolObject__mdt/fields/SymbolID__c.field-meta.xml
<CustomField>
    <fullName>SymbolID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>図記号ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>