force-app/main/default/objects/SymbolObject__mdt/fields/SymbolName__c.field-meta.xml
<CustomField>
    <fullName>SymbolName__c</fullName>
    <label>名称</label>
    <length>100</length>
    <type>Text</type>
</CustomField>